adding more columns to schedule

--- a/cloudinterface/src/main/resources/templates/home.html
+++ b/cloudinterface/src/main/resources/templates/home.html
@@ -284,10 +284,14 @@
                             <table class="table table-striped" id="userTable">
                                 <thead>
                                     <tr>
-                                        <th style="width: 20%" scope="col"></th>
-                                        <th style="width: 20%" scope="col">Type</th>
-                                        <th style="width: 80%" scope="col">Name</th>
-                                    </tr>
+                                        <th style="width: 12%" scope="col"></th>
+                                        <th style="width: 12%" scope="col">Type</th>
+                                        <th style="width: 12%" scope="col">Name</th>
+                                        <th style="width: 12%" scope="col">Owner</th>
+                                        <th style="width: 12%" scope="col">Employee</th>
+                                        <th style="width: 12%" scope="col">Date</th>
+                                        <th style="width: 12%" scope="col">Activity</th>
+										</tr>
                                 </thead>
                                 <tbody th:each="pet: ${pets}">
                                     <tr>									
