--- a/cloudinterface/src/main/resources/templates/home.html
+++ b/cloudinterface/src/main/resources/templates/home.html
@@ -268,18 +268,19 @@
                     </div>
                    <div class="tab-pane fade" id="nav-pets" role="tabpanel" aria-labelledby="nav-pets-tab">
 						<div id="showPetsDiv">
-							<form action="#" th:action="@{/pet/getPets}" method="POST">
-								<button id="showPetList" style="margin: 0.25em;" type="submit" class="btn btn-info float-left">
-									+ List PetZ
-								</button>
-							</form>
+							<button id="showOwnerForm" style="margin: 0.25em;" type="submit" class="btn btn-info float-left">
+								+ Add a New Owner
+							</button>
+							<button id="showOwnerForm" style="margin: 0.25em;" type="submit" class="btn btn-info float-left">
+								+ Add a New Employee
+							</button>
+							<button id="showPetForm" style="margin: 0.25em;" type="button" class="btn btn-info float-left" onclick="showPetModal()">
+								+ Add a New Pet
+							</button>
+							<button id="showPetForm" style="margin: 0.25em;" type="button" class="btn btn-info float-left" onclick="showPetModal()">
+								+ Create Schedule
+							</button>
 						</div>
-
-
-                        <button id="showPetForm" style="margin: 0.25em;" type="button" class="btn btn-info float-right" onclick="showPetModal()">
-                            + Add a New Pet
-                        </button>
-
                         <div class="table-responsive">
                             <table class="table table-striped" id="userTable">
                                 <thead>
@@ -334,7 +335,67 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                        <div class="modal fade" id="ownerModal" tabindex="-1" role="dialog" aria-labelledby="ownerModalLabel" aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="ownerModalLabel">Owner</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <form th:object="${newOwner}" th:action="@{/owner/addOwner}" action="#" method="POST">
+                                            <input type="hidden" name="ownerListId" id="owner-id">
+                                            <div class="form-group">
+                                                <label for="owner-type" class="col-form-label">Type</label>
+                                                <input type="text" name="ownerType" class="form-control" id="owner-title" maxlength="20" required>
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="owner-name" class="col-form-label">Name</label>
+                                                <textarea name="ownerName" id="owner-name" rows="5" maxlength="1000" required></textarea>
+                                            </div>
+                                            <button id="ownerSubmit" type="submit" class="d-none"></button>
+                                        </form>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                        <button type="button" class="btn btn-primary" onclick="$('#ownerSubmit').click();">Save changes</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="modal fade" id="employeeModal" tabindex="-1" role="dialog" aria-labelledby="employeeModalLabel" aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="employeeModalLabel">Employee</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <form th:object="${newEmployee}" th:action="@{/employee/addEmployee}" action="#" method="POST">
+                                            <input type="hidden" name="employeeListId" id="employee-id">
+                                            <div class="form-group">
+                                                <label for="employee-type" class="col-form-label">Type</label>
+                                                <input type="text" name="employeeType" class="form-control" id="employee-title" maxlength="20" required>
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="employee-name" class="col-form-label">Name</label>
+                                                <textarea name="employeeName" id="employee-name" rows="5" maxlength="1000" required></textarea>
+                                            </div>
+                                            <button id="employeeSubmit" type="submit" class="d-none"></button>
+                                        </form>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                        <button type="button" class="btn btn-primary" onclick="$('#employeeSubmit').click();">Save changes</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+					</div>
 				</div>
             </div>
         </div>
@@ -374,6 +435,20 @@
                 $('#pet-type').val(petType ? petType : '');
                 $('#pet-name').val(petName ? petName : '');
                 $('#petModal').modal('show');
+            }
+            // For opening the owner modal
+            function showOwnerModal(ownerListId, ownerType, ownerName) {
+                $('#owner-id').val(ownerListId ? ownerListId : '');
+                $('#owner-type').val(ownerType ? ownerType : '');
+                $('#owner-name').val(ownerName ? ownerName : '');
+                $('#ownerModal').modal('show');
+            }
+            // For opening the employee modal
+            function showEmployeeModal(employeeListId, employeeType, employeeName) {
+                $('#employee-id').val(employeeListId ? employeeListId : '');
+                $('#employee-type').val(employeeType ? employeeType : '');
+                $('#employee-name').val(employeeName ? employeeName : '');
+                $('#employeeModal').modal('show');
             }
 			</script>
     </body>
